added lottie animation and fixed front components

--- a/src/app/home/topbar/topbar.component.html
+++ b/src/app/home/topbar/topbar.component.html
@@ -32,9 +32,7 @@
 
                             <!-- menu area -->
                             <ul class="navbar-nav mx-auto" id="nav">
-                                <li><a href="">{{ 'homepage.topbar_component.home' | translate }}</a></li>
-                                <li>
-                                    <a href="#">Pages</a>
+                                <li><a href="">{{ 'homepage.topbar_component.home' | translate }}</a>
                                     <ul>
                                         <li><a href="#">{{ 'homepage.topbar_component.pages.aboutUs' | translate }}</a></li>
                                         <li><a href="#">{{ 'homepage.topbar_component.pages.howItWorks' | translate }}</a></li>
@@ -51,69 +49,71 @@
                                         <li><a href="">404 Page</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Services</a>
+                                <li>
+                                    <a href="#">Agences</a>
                                     <ul>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.services' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.personalLoan' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.businessLoan' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.homeLoan' | translate }}</a></li>
-                                        <li><a href="">{{ 'homepage.topbar_component.services.educationLoan' | translate }}</a></li>
+                                        <li><a href="">Trouvez Votre Agence</a></li>
+                                        <li><a href="">Liste Des Agences</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Elements</a>
+                                <li><a href="#">Actionnaires</a>
+                                    <ul>
+                                        <li><a href="">Devenir Actionnaire</a></li>
+                                        <li><a href="">Signalétique De l'Action BFI BANK</a></li>
+                                        <li><a href="">Rapports Annuels</a></li>
+                                        <li><a href="">Etat Financières & Indicateurs Trimestriels</a></li>
+                                        <li><a href="">Accédez à Votre Espace Privé D'Actionnariat</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">Services</a>
                                     <ul class="row megamenu">
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 01</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Comptes Bancaires</span>
                                             <ul>
-                                                <li><a href=""><i class="fas fa-sliders-h me-2"></i>Accordions</a></li>
-                                                <li><a href=""><i class="far fa-bell me-2"></i>Alerts</a></li>
-                                                <li><a href=""><i class="fas fa-vector-square me-2"></i>Blockquote</a></li>
-                                                <li><a href=""><i class="fas fa-link me-2"></i>Buttons</a></li>
-                                                <li><a href=""><i class="far fa-square me-2"></i>Call to Action</a></li>
-                                                <li><a href=""><i class="far fa-images me-2"></i>Carousel Slider</a></li>
+                                                <li><a href=""><i class="bi bi-piggy-bank me-2"></i>Compte Epargne</a></li>
+                                                <li><a href=""><i class="bi bi-cash-coin me-2"></i>Compte Courant</a></li>
+                                                <li><a href=""><i class="bi bi-backpack2 me-2"></i>Compte Etudiant</a></li>
+                                                <li><a href=""><i class="bi bi-bank me-2"></i>Compte Professionnel</a></li>
+                                                <li><a href=""><i class="bi bi-safe2 me-2"></i>Compte Bloqué</a></li>
+                                                <li><a href=""><i class="bi bi-currency-exchange me-2"></i>Compte en Device Convertible</a></li>
                                             </ul>
                                         </li>
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 02</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Crédits & Financement</span>
                                             <ul>
-                                                <li><a href=""><i class="far fa-flag me-2"></i>Count Down</a></li>
-                                                <li><a href=""><i class="fas fa-compress me-2"></i>Counters</a></li>
-                                                <li><a href=""><i class="fab fa-wpforms me-2"></i>Forms</a></li>
-                                                <li><a href=""><i class="far fa-check-square me-2"></i>Font Icons</a></li>
-                                                <li><a href=""><i class="fas fa-map-marker-alt me-2"></i>Google Map</a></li>
-                                                <li><a href=""><i class="fas fa-th me-2"></i>Grid System</a></li>
+                                                <li><a href=""><i class="bi bi-person-fill me-2"></i>Financement des Particuliers</a></li>
+                                                <li><a href=""><i class="bi bi-buildings me-2"></i>Financement des Entreprises</a></li>
+                                                <li><a href=""><i class="bi bi-people-fill me-2"></i>Financement des Professionnels</a></li>
+                                                <li><a href=""><i class="bi bi-building-up me-2"></i>Financement des Start-ups</a></li>
                                             </ul>
                                         </li>
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 03</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">SERVICES À L'INTERNATIONAL</span>
                                             <ul>
-                                                <li><a href=""><i class="fab fa-fonticons-fi me-2"></i>Icon With Text</a></li>
-                                                <li><a href=""><i class="fas fa-list-ul me-2"></i>List Styles</a></li>
-                                                <li><a href=""><i class="fas fa-photo-video me-2"></i>Media Object</a></li>
-                                                <li><a href=""><i class="fas fa-expand me-2"></i>Modal</a></li>
-                                                <li><a href=""><i class="far fa-caret-square-right me-2"></i>Pagination</a></li>
-                                                <li><a href=""><i class="fas fa-tasks me-2"></i>Progress Bars</a></li>
+                                                <li><a href=""><i class="bi bi-house-door-fill me-2"></i>Domicilation</a></li>
+                                                <li><a href=""><i class="bi bi-globe2 me-2"></i>Paiements Internationaux</a></li>
+                                                <li><a href=""><i class="fa-solid fa-money-bill-transfer me-2"></i>Opérations de Change</a></li>
+                                                <li><a href=""><i class="fa-brands fa-gg-circle me-2"></i>MoneyGram</a></li>
                                             </ul>
                                         </li>
                                         <li class="col-lg-3">
-                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Elements 04</span>
+                                            <span class="mb-0 mb-lg-3 d-block py-2 p-lg-0 px-4 px-lg-0 text-uppercase sub-title font-weight-600 display-30">Divers</span>
                                             <ul>
-                                                <li><a href=""><i class="fas fa-compress me-2"></i>Page Title1</a></li>
-                                                <li><a href=""><i class="fas fa-compress-arrows-alt me-2"></i>Page Title2</a></li>
-                                                <li><a href=""><i class="fas fa-table me-2"></i>Tables</a></li>
-                                                <li><a href=""><i class="fas fa-sliders-h me-2"></i>Tabs</a></li>
-                                                <li><a href=""><i class="fas fa-text-height me-2"></i>Typography</a></li>
-                                                <li><a href=""><i class="fas fa-video me-2"></i>Videos</a></li>
+                                                <li><a href=""><i class="bi bi-wifi me-2"></i>Banque à Distance</a></li>
+                                                <li><a href=""><i class="bi bi-arrow-left-right me-2"></i>Opérations Bancaires</a></li>
+                                                <li><a href=""><i class="fas fa-table me-2"></i>Carnets de Chèques</a></li>
+                                                <li><a href=""><i class="bi bi-credit-card-fill me-2"></i>Cartes Bancaires</a></li>
+                                                <li><a href=""><i class="bi bi-boxes me-2"></i>Nos Packs</a></li>
+                                                <li><a href=""><i class="fa-solid fa-wallet me-2"></i>Affiliation TPE</a></li>
                                             </ul>
                                         </li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#!">Blog</a>
+                                    <a href="#">Blog</a>
                                     <ul>
-                                        <li><a href="">Blog Grid</a></li>
-                                        <li><a href="">Blog List</a></li>
-                                        <li><a href="">Blog Details</a></li>
+                                        <li><a href="">Dernières Nouvelles</a></li>
+                                        <li><a href="">Newsletter</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="">{{ 'homepage.topbar_component.contactUs' | translate }}</a></li>
