--- a/src/assets/css/plugins.css
+++ b/src/assets/css/plugins.css
@@ -20622,7 +20622,7 @@ textarea.form-control-lg {
     font-style: normal;
     font-weight: 400;
     font-display: block;
-    src: url('../fonts/fa-brands-400.woff2') format("woff2");
+    /*src: url('../fonts/fa-brands-400.woff2') format("woff2");*/
 }
 
 
