--- a/src/app/client/welcome-client/welcome-client.component.html
+++ b/src/app/client/welcome-client/welcome-client.component.html
@@ -1,5 +1,9 @@
 <div class="row justify-content-md-center">
-  <div class="col-4">
+  <div class="lottie-animation mt-10" *ngIf="showAnimation">  
+    <ng-lottie [options]="options" (animationCreated)="onAnimate($event)"></ng-lottie>
+  </div>
+  
+  <div class="col-4" *ngIf="!showAnimation">
     <div class="card" style="width: '18rem'">
       <div class="card-body">
         <h5 class="card-title">Welcome Bfi Client!</h5>
