--- a/src/app/home/process/process.component.html
+++ b/src/app/home/process/process.component.html
@@ -15,9 +15,8 @@
                             <div class="card-body">
                                 <span>1</span>
                                 <i class="ti-desktop display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.online.step' | translate }}</h3>
+                                <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.online.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.online.description' | translate }}</p>
-                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -26,9 +25,8 @@
                             <div class="card-body">
                                 <span>2</span>
                                 <i class="ti-file display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.form.step' | translate }}</h3>
+                                <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.form.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.form.description' | translate }}</p>
-                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -37,9 +35,8 @@
                             <div class="card-body">
                                 <span>3</span>
                                 <i class="ti-agenda display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.submit.step' | translate }}</h3>
+                                <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.submit.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.submit.description' | translate }}</p>
-                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
@@ -48,9 +45,8 @@
                             <div class="card-body">
                                 <span>4</span>
                                 <i class="ti-check-box display-18 colorban d-block mb-3"></i>
-                                <h3 class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.approve.step' | translate }}</h3>
+                                <h3> <a href="#!" class="h5 mb-4 text-secondary">{{ 'homepage.applicationProcess.steps.approve.step' | translate }}</a></h3>
                                 <p class="mb-4">{{ 'homepage.applicationProcess.steps.approve.description' | translate }}</p>
-                                <a href="#!" class="butn small homebtn">{{ 'homepage.applicationProcess.btn' | translate }}</a>
                             </div>
                         </div>
                     </div>
