--- a/src/app/client/password/password.component.html
+++ b/src/app/client/password/password.component.html
@@ -19,16 +19,11 @@
             <div class="row"> 
                 <div class="col-md-6">
                      <div>
-                      <form (ngSubmit)="onSubmitLogin()" #loginForm="ngForm" class="box">
-                        <h1>Login</h1>
-                        <p class="box-text">Entrez vos coordonnées pour se connecter.</p> 
-                        <input type="login" id="loginName" name="login" [(ngModel)]="login" placeholder="Identifiant"> 
-                        <input type="password" id="loginPassword" name="password" [(ngModel)]="password" placeholder="Mot de passe"> 
-                        <div *ngIf="authenticationError" class="alert alert-danger" role="alert">
-                          Vérifiez vos coordonnées !
-                        </div>
-                        <a class="forgot box-text" href="#"  href="/password">Mot de passe oublié?</a> 
-                        <input type="submit" value="Login">
+                      <form (ngSubmit)="onSubmitReset()" #loginForm="ngForm" class="box">
+                        <p class="box-text">Entrez votre Email pour réinitialiser votre mot de passe.</p> 
+                        <input type="emailreset" id="emailreset" name="emailreset" [(ngModel)]="emailreset" placeholder="Votre Email"> 
+                       
+                        <input type="submit" value="Reset">
                         <div class="col-md-12"> 
                             <ul class="social-network social-circle"> 
                                 <li><a href="#" class="icoFacebook" title="Facebook"><i class="fab fa-facebook-f"></i></a></li> 
@@ -36,7 +31,6 @@
                                 <li><a href="#" class="icoGoogle" title="Google +"><i class="fab fa-google-plus"></i></a></li> 
                             </ul> 
                         </div> 
-                        <p class="box-text">Vous n'avez pas de compte ? <a class="forgot box-text" href="/signup">Créer un compte</a></p>
                     </form>
                             </div> 
                           </div> 
