--- a/src/app/client/welcome-client/welcome-client.component.html
+++ b/src/app/client/welcome-client/welcome-client.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-md-center">
-  <div class="lottie-animation mt-10" *ngIf="showAnimation">  
+  <div class="lottie-animation mt-10 centerlottie" *ngIf="showAnimation">  
     <ng-lottie [options]="options" (animationCreated)="onAnimate($event)"></ng-lottie>
   </div>
   
