--- a/src/app/client/dashboard/autres-informations/autres-informations.component.html
+++ b/src/app/client/dashboard/autres-informations/autres-informations.component.html
@@ -4,14 +4,14 @@
     </div>
 
     <div class="card-body">
-        <form [formGroup]="infoForm" class="row g-3">
+        <form [formGroup]="infoForm" class="row g-3" (ngSubmit)="saveAdditionalInfo()">
             <div class="col-12">
               
-                <label for="type_particulier">Type de particulier</label><span class="required">*</span>
-                <select id="type_particulier" name="type_particulier" formControlName="type_particulier">
+                <label for="typeIndividual">Type de particulier</label><span class="required">*</span>
+                <select id="typeIndividual" name="typeIndividual" formControlName="typeIndividual">
                     <option value="" disabled selected>Veuillez choisir le type de particulier</option>
-                    <option value="sect_prv">Secteur Privé</option>
-                    <option value="sect_eta">Secteur Etatique</option>
+                    <option value="SECTEUR_PRIVE">Secteur Privé</option>
+                    <option value="SECTEUR_ETATIQUE">Secteur Etatique</option>
                 </select>
 
             </div>
@@ -26,41 +26,41 @@
             </div>
             
             <div class="col-4">
-                <label for="Type_piece">Type de la pièce </label><span class="required">*</span>
-                <input type="text" id="Type_piece" name="Type_piece" formControlName="Type_piece" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
-                <div *ngIf="infoForm.get('Type_piece')?.invalid && (infoForm.get('Type_piece')?.dirty || infoForm.get('Type_piece')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('Type_piece')?.hasError('required')" style="margin-top: 3px;">Entrez un type valide</div>
-                    <div *ngIf="infoForm.get('Type_piece')?.hasError('pattern')" style="margin-top: 3px;">Le type de la pièce peut pas contenir de chiffres</div>
+                <label for="pieceType">Type de la pièce </label><span class="required">*</span>
+                <input type="text" id="pieceType" name="pieceType" formControlName="pieceType" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                <div *ngIf="infoForm.get('pieceType')?.invalid && (infoForm.get('pieceType')?.dirty || infoForm.get('pieceType')?.touched)" class="text-danger">
+                    <div *ngIf="infoForm.get('pieceType')?.hasError('required')" style="margin-top: 3px;">Entrez un type valide</div>
+                    <div *ngIf="infoForm.get('pieceType')?.hasError('pattern')" style="margin-top: 3px;">Le type de la pièce peut pas contenir de chiffres</div>
                 </div>
             </div>
             
             <div class="col-4">
-                <label for="numero_piece">Numéro de la pièce </label><span class="required">*</span>
-                <input type="text" id="numero_piece" name="numero_piece" formControlName="numero_piece" required  pattern="\d{4} \d{4} \d{4} \d{4}" placeholder="0123 4567 8912 3456">
-                <div *ngIf="infoForm.get('numero_piece')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('numero_piece')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('numero_piece')?.hasError('required')" style="margin-top: 3px;">Entrez un numéro valide</div>
-                    <div *ngIf="infoForm.get('numero_piece')?.hasError('pattern')" style="margin-top: 3px;">Le numéro de la pièce ne doit contenir que des chiffres et chaque groupe de quatre chiffres doit être séparé par un espace.</div>
+                <label for="pieceNumber">Numéro de la pièce </label><span class="required">*</span>
+                <input type="text" id="pieceNumber" name="pieceNumber" formControlName="pieceNumber" required  pattern="\d{4} \d{4} \d{4} \d{4}" placeholder="0123 4567 8912 3456">
+                <div *ngIf="infoForm.get('pieceNumber')?.invalid && (infoForm.get('pieceNumber')?.dirty || infoForm.get('pieceNumber')?.touched)" class="text-danger">
+                    <div *ngIf="infoForm.get('pieceNumber')?.hasError('required')" style="margin-top: 3px;">Entrez un numéro valide</div>
+                    <div *ngIf="infoForm.get('pieceNumber')?.hasError('pattern')" style="margin-top: 3px;">Le numéro de la pièce ne doit contenir que des chiffres et chaque groupe de quatre chiffres doit être séparé par un espace.</div>
                 </div>
             </div>
             
             <div class="col-12">
-                <label for="date_expiration">Date d'expiration de la pièce</label><span class="required">*</span>
-                <input type="date" id="date_expiration" name="date_expiration" formControlName="date_expiration" min="{{ today | date:'yyyy-MM-dd' }}">
+                <label for="expirationDate">Date d'expiration de la pièce</label><span class="required">*</span>
+                <input type="date" id="expirationDate" name="expirationDate" formControlName="expirationDate" min="{{ today | date:'yyyy-MM-dd' }}">
             </div>
             
             <div class="col-12">
-                <label for="photo_piece">Photo de la pièce </label><span class="required">*</span>
-                <input type="file" id="photo_piece" name="photo_piece" formControlName="photo_piece" accept="png,.jpg, .jpeg,  .pdf">
-                <div *ngIf="infoForm.get('photo_piece')?.invalid && (infoForm.get('photo_piece')?.dirty || infoForm.get('photo_piece')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('photo_piece')?.hasError('required')" style="margin-top: 3px;">Les extensions valides sont : .jpg, .jpeg, .png, .pdf</div>
+                <label for="piecePhoto">Photo de la pièce</label><span class="required">*</span>
+                <input type="file" id="piecePhoto" name="piecePhoto" formControlName="piecePhoto" accept="png,.jpg, .jpeg,  .pdf">
+                <div *ngIf="infoForm.get('piecePhoto')?.invalid && (infoForm.get('piecePhoto')?.dirty || infoForm.get('piecePhoto')?.touched)" class="text-danger">
+                    <div *ngIf="infoForm.get('piecePhoto')?.hasError('required')" style="margin-top: 3px;">Les extensions valides sont : .jpg, .jpeg, .png, .pdf</div>
                 </div>
             </div>
             
             <div class="col-12">
-                <label for="code_parrainage">Code parrainage </label>
-                <input type="text" id="code_parrainage" name="code_parrainage" formControlName="code_parrainage"  pattern="[0-9]{4}" placeholder="0123">
-                <div *ngIf="infoForm.get('code_parrainage')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('code_parrainage')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('code_parrainage')?.hasError('pattern')" style="margin-top: 3px;">Le code doit contenir 4 chiffres</div>
+                <label for="referralCode">Code parrainage</label>
+                <input type="text" id="referralCode" name="referralCode" formControlName="referralCode"  pattern="[0-9]{4}" placeholder="0123">
+                <div *ngIf="infoForm.get('referralCode')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('referralCode')?.touched)" class="text-danger">
+                    <div *ngIf="infoForm.get('referralCode')?.hasError('pattern')" style="margin-top: 3px;">Le code doit contenir 4 chiffres</div>
                 </div>
             </div>
 
