--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -3,18 +3,18 @@
         <h4>Vos coordonnées d'authentification</h4>
     </div>
     <div class="card-body">
-        
+        <form [formGroup]="authForm">
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Username" value=""/>
+                        <input type="text" name="login" class="form-control" placeholder="Login" formControlName="login" value=""/>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Mot de passe" value=""/>
+                        <input type="text" name="password" class="form-control" placeholder="Mot de passe" formControlName="password" value=""/>
                     </div>
                 </div>
             </div>
             <button type="button" class="btn btn-secondary butn" (click)="Suivant()">Envoyer</button>
-        
+        </form>
     </div>
 </div>
