Adjusted transition logic within the sign-in dashboard and added icons to input fields

--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -6,18 +6,24 @@
         <form [formGroup]="infoForm" class="row g-3 needs-validation" novalidate>
             <div class="col-12">
                 <label for="genre" class="form-label">Genre</label>
-                <select id="inputState" class="form-select" required formControlName="genre">
-                    <option value="" disabled selected>Choisissez...</option>
-                    <option value="monsieur">Monsieur</option>
-                    <option value="madame">Madame</option>
-                </select>
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-venus-mars"></i></span>
+                    <select id="inputState" class="form-select" required formControlName="genre">
+                        <option value="" disabled selected>Choisissez...</option>
+                        <option value="monsieur">Monsieur</option>
+                        <option value="madame">Madame</option>
+                    </select>
+                </div>
                 <div *ngIf="infoForm.get('genre')?.invalid && (infoForm.get('genre')?.dirty || infoForm.get('genre')?.touched)" class="text-danger">
                     <div *ngIf="infoForm.get('genre')?.hasError('required')" style="margin-top: 3px;">Veuillez choisir votre genre</div>
                   </div>
             </div>
             <div class="col-md-6">
-                <label for="firstName" class="form-label">Nom</label><span class="required">*</span>
-                <input type="text" class="form-control" id="firstName" formControlName="firstName" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                <label for="firstName" class="form-label">Nom</label><span class="required">*</span>                
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                    <input type="text" class="form-control" id="firstName" formControlName="firstName" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                </div>
                 <div *ngIf="infoForm.get('firstName')?.invalid && (infoForm.get('firstName')?.dirty || infoForm.get('firstName')?.touched)" class="text-danger">
                     <div *ngIf="infoForm.get('firstName')?.hasError('required')" style="margin-top: 3px;">Entrez un nom valide</div>
                     <div *ngIf="infoForm.get('firstName')?.hasError('pattern')" style="margin-top: 3px;">Le nom ne peut pas contenir de chiffres</div>
@@ -25,8 +31,10 @@
             </div>
             <div class="col-md-6">
                 <label for="lastName" class="form-label">Prénom</label><span class="required">*</span>
-                <input type="text" class="form-control" id="lastName" formControlName="lastName" required
-                       pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-person"></i></span> <!-- Replaced the icon class with Bootstrap's person icon -->
+                    <input type="text" class="form-control" id="lastName" formControlName="lastName" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                </div>
                        <div *ngIf="infoForm.get('lastName')?.invalid && (infoForm.get('lastName')?.dirty || infoForm.get('lastName')?.touched)" class="text-danger">
                         <div *ngIf="infoForm.get('lastName')?.hasError('required')" class="text-danger">Entrez un prénom valide</div>
                         <div *ngIf="infoForm.get('lastName')?.hasError('hasNumbers')" class="text-danger">Le prénom ne peut pas contenir de chiffres</div>                        
@@ -38,7 +46,10 @@
             </div>
             <div class="col-md-6">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" formControlName="email" required>
+                <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                    <input type="email" class="form-control" id="email" formControlName="email" required>
+                </div>
                 <div *ngIf="infoForm.get('email')?.invalid && (infoForm.get('email')?.dirty || infoForm.get('email')?.touched)" class="text-danger">
                     <div *ngIf="infoForm.get('email')?.hasError('required')">Entrez un email valide</div>
                     <div *ngIf="infoForm.get('email')?.hasError('email')">Entrez une adresse email valide</div>
