--- a/src/app/client/dashboard/adresse/adresse.component.html
+++ b/src/app/client/dashboard/adresse/adresse.component.html
@@ -12,7 +12,10 @@
         <form class="row g-3" #form="ngForm">
             <div class="col-12">
                 <label for="pays">Entrer votre pays </label><span class="required">*</span>
-                <input type="text" id="pays" name="pays" (change)="locateCountry()" required>
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-flag-fill"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" class="form-control" id="pays" name="pays" (change)="locateCountry()" required>
+                </div>            
             </div>
 
             <div class="map-container">
@@ -25,22 +28,33 @@
             </div>
             <div class="col-md-6">
                 <label for="ville">Ville </label><span class="required">*</span>
-                <input type="text" id="ville" name="ville" #villeInput>
-                <!-- Ajoutez ici l'indicateur d'obligation -->
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-building"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" class="form-control" id="ville" name="ville" #villeInput>
+                </div>
             </div>
             
             <div class="col-md-6">
                 <label for="quartier">Quartier </label>
-                <input type="text" id="quartier" name="quartier">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-house"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" class="form-control" id="quartier" name="quartier">
+                </div>            
             </div>
+
             <div class="col-md-6">
                 <label for="adresse">Référence de votre adresse </label>
-                <input type="text" id="adresse" name="adresse">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-geo-alt"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" class="form-control" id="adresse" name="adresse">
+                </div>            
             </div>
             <div class="col-md-6">
                 <label for="bp">BP </label>
-                <input type="text" id="bp" name="bp">
-            </div>
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-envelope"></i></span> <!-- Icon added to the input group -->
+                    <input type="text" class="form-control" id="bp" name="bp">
+                </div>            </div>
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
