--- a/src/app/client/dashboard/autres-informations/autres-informations.component.html
+++ b/src/app/client/dashboard/autres-informations/autres-informations.component.html
@@ -6,19 +6,25 @@
     <div class="card-body">
         <form [formGroup]="infoForm" class="row g-3">
             <div class="col-12">
-              
                 <label for="type_particulier">Type de particulier</label><span class="required">*</span>
-                <select id="type_particulier" name="type_particulier" formControlName="type_particulier">
-                    <option value="" disabled selected>Veuillez choisir le type de particulier</option>
-                    <option value="sect_prv">Secteur Privé</option>
-                    <option value="sect_eta">Secteur Etatique</option>
-                </select>
 
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span> <!-- Icon added to the left of the label -->
+                    <select id="type_particulier" name="type_particulier" formControlName="type_particulier" class="form-select">
+                        <option value="" disabled selected>Veuillez choisir le type de particulier</option>
+                        <option value="sect_prv">Secteur Privé</option>
+                        <option value="sect_eta">Secteur Etatique</option>
+                    </select>
+                </div>
             </div>
+            
 
             <div class="col-4">
                 <label for="profession">Profession </label><span class="required">*</span>
-                <input type="text" id="profession" name="profession" formControlName="profession" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-person-badge-fill"></i></span> <!-- Icon added to the left of the input field -->
+                    <input type="text" id="profession" name="profession" formControlName="profession" class="form-control" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                </div>                
                 <div *ngIf="infoForm.get('profession')?.invalid && (infoForm.get('profession')?.dirty || infoForm.get('profession')?.touched)" class="text-danger">
                     <div *ngIf="infoForm.get('profession')?.hasError('required')" style="margin-top: 3px;">Entrez une profession valide</div>
                     <div *ngIf="infoForm.get('profession')?.hasError('pattern')" style="margin-top: 3px;">La profession nom ne peut pas contenir de chiffres</div>
@@ -27,19 +33,26 @@
             
             <div class="col-4">
                 <label for="Type_piece">Type de la pièce </label><span class="required">*</span>
-                <input type="text" id="Type_piece" name="Type_piece" formControlName="Type_piece" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
-                <div *ngIf="infoForm.get('Type_piece')?.invalid && (infoForm.get('Type_piece')?.dirty || infoForm.get('Type_piece')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('Type_piece')?.hasError('required')" style="margin-top: 3px;">Entrez un type valide</div>
-                    <div *ngIf="infoForm.get('Type_piece')?.hasError('pattern')" style="margin-top: 3px;">Le type de la pièce peut pas contenir de chiffres</div>
+                
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-card-list"></i></span> <!-- Icon added to the left of the input field -->
+                    <select id="type_particulier" name="type_particulier" formControlName="type_particulier" class="form-select">
+                        <option value="" disabled selected>Veuillez choisir le type de la pièce</option>
+                        <option value="sect_prv">Carte d'identité nationale</option>
+                        <option value="sect_eta">Passeport</option>
+                    </select>
                 </div>
             </div>
             
             <div class="col-4">
-                <label for="numero_piece">Numéro de la pièce </label><span class="required">*</span>
-                <input type="text" id="numero_piece" name="numero_piece" formControlName="numero_piece" required  pattern="\d{4} \d{4} \d{4} \d{4}" placeholder="0123 4567 8912 3456">
+                <label for="numero_piece">Référence  de la pièce </label><span class="required">*</span>
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-file-text"></i></span> <!-- Icon added to the left of the label -->
+                    <input type="text" id="numero_piece" name="numero_piece" formControlName="numero_piece" class="form-control" required pattern="[A-Za-z0-9\s]">
+                </div>                           
                 <div *ngIf="infoForm.get('numero_piece')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('numero_piece')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('numero_piece')?.hasError('required')" style="margin-top: 3px;">Entrez un numéro valide</div>
-                    <div *ngIf="infoForm.get('numero_piece')?.hasError('pattern')" style="margin-top: 3px;">Le numéro de la pièce ne doit contenir que des chiffres et chaque groupe de quatre chiffres doit être séparé par un espace.</div>
+                    <div *ngIf="infoForm.get('numero_piece')?.hasError('required')" style="margin-top: 3px;">Entrez une référence valide</div>
+                    <div *ngIf="infoForm.get('numero_piece')?.hasError('pattern')" style="margin-top: 3px;">La référence de la pièce doit contenir des lettres et des chiffres.</div>
                 </div>
             </div>
             
@@ -48,17 +61,20 @@
                 <input type="date" id="date_expiration" name="date_expiration" formControlName="date_expiration" min="{{ today | date:'yyyy-MM-dd' }}">
             </div>
             
-            <div class="col-12">
-                <label for="photo_piece">Photo de la pièce </label><span class="required">*</span>
-                <input type="file" id="photo_piece" name="photo_piece" formControlName="photo_piece" accept="png,.jpg, .jpeg,  .pdf">
-                <div *ngIf="infoForm.get('photo_piece')?.invalid && (infoForm.get('photo_piece')?.dirty || infoForm.get('photo_piece')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('photo_piece')?.hasError('required')" style="margin-top: 3px;">Les extensions valides sont : .jpg, .jpeg, .png, .pdf</div>
-                </div>
-            </div>
+                <div class="mb-3">
+                    <label for="photo_piece" class="form-label">Photo de la pièce</label><span class="required">*</span>
+                    <input class="form-control" formControlName="photo_piece" name="photo_piece" type="file" id="photo_piece" accept="png,.jpg, .jpeg,  .pdf">
+                    <div *ngIf="infoForm.get('photo_piece')?.invalid && (infoForm.get('photo_piece')?.dirty || infoForm.get('photo_piece')?.touched)" class="text-danger">
+                        <div *ngIf="infoForm.get('photo_piece')?.hasError('required')" style="margin-top: 3px;">Les extensions valides sont : .jpg, .jpeg, .png, .pdf</div>
+                    </div>
+                </div>             
             
             <div class="col-12">
                 <label for="code_parrainage">Code parrainage </label>
-                <input type="text" id="code_parrainage" name="code_parrainage" formControlName="code_parrainage"  pattern="[0-9]{4}" placeholder="0123">
+                <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-shield-lock-fill"></i></span> <!-- Icon added to the left of the input field -->
+                    <input type="text" id="code_parrainage" name="code_parrainage" formControlName="code_parrainage" class="form-control" pattern="[0-9]{4}" placeholder="0123">
+                </div>
                 <div *ngIf="infoForm.get('code_parrainage')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('code_parrainage')?.touched)" class="text-danger">
                     <div *ngIf="infoForm.get('code_parrainage')?.hasError('pattern')" style="margin-top: 3px;">Le code doit contenir 4 chiffres</div>
                 </div>
