--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -7,10 +7,16 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Username" value=""/>
+                        <div class="input-group">                          
+                            <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span>
+                            <input type="text" class="form-control" placeholder="Username" value=""/>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Mot de passe" value=""/>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                            <input type="text" class="form-control" placeholder="Mot de passe" value=""/>
+                        </div>
                     </div>
                 </div>
             </div>
