--- a/src/app/home/details/details.component.html
+++ b/src/app/home/details/details.component.html
@@ -1,61 +1,92 @@
- <!-- 
-        ================================================== -->
-        <section class="bg-light">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4 mb-lg-0">
-                        <div class="mx-auto text-center">
-                            <img src="../../../assets/img/about/about-3.jpg" class="rounded" alt="...">
-                        </div>
+<section class="bg-light">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 mb-4 mb-lg-0">
+                <div class="mx-auto text-center">
+                    <img src="../../../assets/img/about/about-3.jpg" class="rounded" alt="...">
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="ps-lg-6 ps-xl-10 w-lg-90">
+                    <div class="mb-4">
+                        <div class="main-title title-left">{{ 'homepage.details.gettingLoan' | translate }}<span class="line-left"></span></div>
+                        <h2 class="w-90">{{ 'homepage.details.subheading' | translate }}</h2>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="ps-lg-6 ps-xl-10 w-lg-90">
-                            <div class="mb-4">
-                                <div class="main-title title-left">{{ 'homepage.details.gettingLoan' | translate }}<span class="line-left"></span></div>
-                                <h2 class="w-90">{{ 'homepage.details.subheading' | translate }}</h2>
+                    <p class="mb-4">
+                        {{ 'homepage.details.description' | translate }}
+                    </p>
+                    <div id="accordion" class="accordion-style">
+                        <div class="card mb-3">
+                            <div class="card-header" id="headingOne">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">{{ 'homepage.details.checkYourRate' | translate }}</button>
+                                </h5>
                             </div>
-                            <p class="mb-4">
-                                {{ 'homepage.details.description' | translate }}
-                            </p>
-                            <div id="accordion" class="accordion-style">
-                                <div class="card mb-3">
-                                    <div class="card-header" id="headingOne">
-                                        <h5 class="mb-0">
-                                            <button class="btn btn-link" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">{{ 'homepage.details.checkYourRate' | translate }}</button>
-                                        </h5>
-                                    </div>
-                                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
-                                        <div class="card-body position-relative">{{ 'homepage.details.checkDesc' | translate }}
-                                        </div>
-                                    </div>
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-bs-parent="#accordion">
+                                <div class="card-body position-relative">{{ 'homepage.details.checkDesc' | translate }}
                                 </div>
-                                <div class="card mb-3">
-                                    <div class="card-header" id="headingTwo">
-                                        <h5 class="mb-0">
-                                            <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">{{ 'homepage.details.chooseYourLoan' | translate }}</button>
-                                        </h5>
-                                    </div>
-                                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
-                                        <div class="card-body position-relative">
-                                            {{ 'homepage.details.chooseDesc' | translate }}
-                                        </div>
-                                    </div>
+                            </div>
+                        </div>
+                        <div class="card mb-3">
+                            <div class="card-header" id="headingTwo">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">{{ 'homepage.details.chooseYourLoan' | translate }}</button>
+                                </h5>
+                            </div>
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+                                <div class="card-body position-relative">
+                                    {{ 'homepage.details.chooseDesc' | translate }}
                                 </div>
-                                <div class="card">
-                                    <div class="card-header" id="headingThree">
-                                        <h5 class="mb-0">
-                                            <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">{{ 'homepage.details.getYourFunds' | translate }}</button>
-                                        </h5>
-                                    </div>
-                                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
-                                        <div class="card-body position-relative">
-                                            {{ 'homepage.details.getDesc' | translate }}
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header" id="headingThree">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">{{ 'homepage.details.getYourFunds' | translate }}</button>
+                                </h5>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-parent="#accordion">
+                                <div class="card-body position-relative">
+                                    {{ 'homepage.details.getDesc' | translate }}
+
+                                </div>
+                            </div>
+                        </div>
+
+                      
+                        <div class="card mb-3">
+                            <div class="card-header" id="headingFour">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">{{ 'homepage.details.simulateLoan' | translate }}</button>
+                                </h5>
+                            </div>
+                            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-bs-parent="#accordion">
+                                <div class="card-body position-relative">
+                                    <!-- Formulaire de simulation de prêt -->
+                                    <form (ngSubmit)="calculatePayment()">
+                                        <div class="form-group">
+                                            <label for="amount">{{  'homepage.details.Rising' | translate }}</label>
+                                            <input type="number" class="form-control" id="amount" [(ngModel)]="loanAmount" name="amount" required>
                                         </div>
+                                        <div class="form-group">
+                                            <label for="term">{{ 'homepage.details.Periode' | translate }}</label>
+                                            <input type="number" class="form-control" id="term" [(ngModel)]="loanTerm" name="term" required>
+                                        </div>
+                                        <button type="submit"class="btn btn-secondary butn">Simuler</button>
+                                    </form>
+                                    <div *ngIf="monthlyPayment">
+                                        <h4>{{ 'homepage.details.Paiement' | translate }}</h4>
+                                        <p>{{ monthlyPayment | currency:'TND ':'symbol':'1.2-2' }}</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        
+
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
+
